--- a/assets/main.css
+++ b/assets/main.css
@@ -337,7 +337,7 @@ span {
 }
 
 .sticky-icons .icon:hover {
-  background-color: #ffc107;
+  background-color: #FFDD02;
   transform: scale(1.1);
 }
 
